--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-size": "^2.0.2",
     "react-router-dom": "^6.15.0",
     "react-slideshow-image": "^4.2.1",
     "sort-by": "^1.2.0"
