--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-size": "^2.0.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-slideshow-image": "^4.2.1",
     "sort-by": "^1.2.0"
