--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-image-size": "^2.0.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "react-slideshow-image": "^4.2.1",
     "sort-by": "^1.2.0"
   },
@@ -34,6 +35,7 @@
     "@types/lodash.throttle": "^4.1.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^3.1.0",
